# opencv_examples

./: .gitignore  README.md  conanfile.py  meson.build
include/: util.hpp
part_four/: meson.build
part_four/srcs/: meme.cpp  meme_bak.cpp
part_one/: meson.build
part_one/srcs/: first.cpp
part_three/: meson.build
part_three/srcs/: book.cpp  book_static.cpp  cloning.cpp  diff.cpp  face.cpp
part_two/: meson.build
part_two/srcs/: green.cpp  homography.cpp
srcs/: check.cpp
