install_subdir('images', install_dir:join_paths(meson.build_root(), 'part_three'))

diff_main_src = files(['srcs/diff.cpp'])
executable('diff', sources: diff_main_src, dependencies:[project_dep])

cloning_main_src = files(['srcs/cloning.cpp'])
executable('cloning', sources: cloning_main_src, dependencies:[project_dep])
