install_subdir('images', install_dir:join_paths(meson.build_root(), 'part_two'))

first_main_src = files(['srcs/green.cpp'])
executable('green', sources: first_main_src, dependencies:[project_dep])
homo_main_src = files(['srcs/homography.cpp'])
executable('homography', sources: homo_main_src, dependencies:[project_dep])
